* Clean up 
* Configure EAS Build for Android 
* Fix build abb 