@@ -99,13 +99,13 @@
   "dependencies": {
     "@babel/preset-env": "7.12.1",
     "@polkadot/api": "^5.5.1",
-    "@react-native-async-storage/async-storage": "1.15.5",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-clipboard/clipboard": "1.8.4",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "^5.x",
-    "@react-navigation/material-top-tabs": "^5.x",
-    "@react-navigation/native": "5.9.4",
-    "@react-navigation/stack": "5.14.5",
+    "@react-navigation/bottom-tabs": "^6.0.4",
+    "@react-navigation/material-top-tabs": "^6.0.4",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/stack": "^6.0.4",
     "@remobile/react-native-qrcode-local-image": "https://github.com/BlueWallet/react-native-qrcode-local-image",
     "aez": "1.0.1",
     "assert": "2.0.0",
