@@ -1,1 +1,1 @@
-"* Clean up \n* Configure EAS Build for Android \n* Fix build abb \n"
+"* Update samll send \n* Update version react native modal \n* Clean up \n* Configure EAS Build for Android \n* Fix build abb \n"
